--- a/404.html
+++ b/404.html
@@ -74,6 +74,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="https://www.bitsdraumar.is/assets/apple-touch-icon.png">
 
   
+    <link type="application/atom+xml" rel="alternate" href="https://www.bitsdraumar.is/rss.xml" title="Bitsdraumar" />
+  
 
   
 
