Updated first post and about page.

--- a/404.html
+++ b/404.html
@@ -94,7 +94,7 @@
         
           <li><a href="https://www.bitsdraumar.is">Posts</a></li>
           <li><a href="https://www.bitsdraumar.is/tags">Tags</a></li>
-          <li><a href="https://www.bitsdraumar.is/about">About</a></li>
+          <li><a href="https://www.bitsdraumar.is/about">About & Projects</a></li>
         
       </ul>
     </div>
