--- a/bytes-before-flops/index.html
+++ b/bytes-before-flops/index.html
@@ -137,29 +137,37 @@
   	<p>A small, but deep dive into performance and data-oriented optimization.</p>
 <span id="continue-reading"></span><h2 id="foreword">Foreword</h2>
 <p>So, earlier this year I did a presentation at a cool(get it?) little Norwegian company called Airthings.</p>
-<p>It was a two parter. First part was how the compilation pipeline works - from ASCII to assembly, greatly simplified of course. It was from an old presentation I did many years ago.
-The second part is the interesting one if you ask me. It's about performance and what are some of the low-hanging fruits that you can pick off to speed up stuff as much as possible.</p>
+<p>It was a two-parter. First part was how the compilation pipeline works - from ASCII to assembly, greatly simplified of course. It was from an old presentation I did many years ago.
+The second part is the interesting. It's about performance and what are some of the low-hanging fruits that you can pick off to speed up stuff as much as possible.</p>
 <p>Now, that part actually takes a while, but in short it's basically a distillation of my experience working on compilers, assembly and writing vectorized code.
 The gist of it is - data.</p>
-<p>It ocurred to me that a small summary would make a good blog post. There's plenty of material on data-oriented design and performance, but this might be a nice overview.</p>
+<p>It occurred to me that a small summary would make a good blog post. There's plenty of material on data-oriented design and performance, but this might be a nice overview.</p>
 <p>I'll style it as a written representation of how I approach optimization.</p>
 <p>When I approach an optimization effort, first thing I do is I try to visualize the data, where each bit is going from and to, what operations are being done, what's the difference between the initial and final state, can we get there with fewer or simpler steps?</p>
 <p>If the data is coming in in a suboptimal form, transform it.<br />
 There is no algorithm in the world that will save you from inefficiently coded information.</p>
 <p>Usually the steps, in my experience, go like this:</p>
-<h2 id="1-specialize-the-algorithm">1. Specialize the algorithm</h2>
-<p>This step is not directly related to data, but changing data often requires changing the algorithm. Not only do we need to change access patterns and the shape data, but often a different algorithm more suited to the new form of data we're processing.</p>
+<h2 id="1-profile">1. Profile</h2>
+<p>Before anything else, <strong>profile</strong>.</p>
+<p>Sometimes you can intuit where the bottleneck is, but most of the time, you would be surprised at the real place the algorithm falls apart.
+Sometimes it won't be a single bottleneck, maybe it'll be spread out over multiple places (worst case scenario being the flat profile where program time is roughly evenly distributed).</p>
+<p>A lot of it depends on not only understanding low-level programming but the domain that you're working with.<br />
+There's only so much you can optimize without enough information on what that specific algorithm/code/subsystem is supposed to be doing, rather than what it is actually (slowly) doing.</p>
+<p>Also, once the lowest-hanging fruit has been picked, we're not talking just function, but instruction-level profiling as well where, depending on the machine, you can be frontend-bound, backend-bound, memory-bound... a whole new world opens up.<br />
+See VTune <a href="https://www.intel.com/content/www/us/en/docs/vtune-profiler/user-guide/2023-0/cpu-metrics-reference.html">metrics</a> and <a href="https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/top-down-microarchitecture-analysis-method.html">analysis</a> guides, lots of useful stuff in there.</p>
+<h2 id="2-specialize-the-algorithm">2. Specialize the algorithm</h2>
+<p>This step is not directly related to data, but changing data often requires changing the algorithm. Not only do we need to change access patterns and the shape of the data, but often a different algorithm more suited to the new form of data we're processing.</p>
 <p>Regardless, this is a crucial part as this is where you identify one of the most important parts of optimization - &quot;do less&quot;.
 Usually when we implement algorithms, we just try to make them work, aka. the &quot;make it work-&gt;make it fast-&gt;make it beautiful&quot; paradigm.
-In the process of development we change the data, the algorithm, the code goes through many iterations, a lot if left at the table.</p>
-<p>Specializing an algorithms means taking away the genericity and only leaving in the parts that are relevant to the data being processed.
+In the process of development we change the data, the algorithm, the code goes through many iterations, a lot is left on the table.</p>
+<p>Specializing an algorithm means taking away the genericity and only leaving in the parts that are relevant to the data being processed.
 If it means specializing the data, then that's fair game as well, garbage in/garbage out. As part of development we tend to use existing algorithms, whether
 it is from a standard library or an external one, or even just different module in the program.</p>
 <p>These existing algorithms are by definition not bespoke and don't take into account the data or the manipulation done on it. In many cases you can rewrite them to suit your use-case, in others you can simply use a more specific algorithm, e.g. <code>radixsort</code> instead of <code>quicksort</code>.</p>
 <p>People are often afraid of peeking into the libraries, thinking it's magic. It's not, just look at the code, learn what's being used and adapt it to your own case.</p>
 <p>The specific example given in the presentation was specializing a generic image downscaling algorithm to specifically 
 handle integer-based, 32bit argb images, which was used to great effect. Sped up the implementation as well as allowed for further optimizations.</p>
-<p>Small and trivial example would be something like this:</p>
+<p>Small and (very) trivial example would be something like this:</p>
 <pre data-lang="c" style="background-color:#2e3440;color:#d8dee9;" class="language-c "><code class="language-c" data-lang="c"><span style="color:#616e88;">// we&#39;re trying to parse a validated, 2-digit, positive integer
 </span><span>
 </span><span style="color:#616e88;">// the generic way (atoi)
@@ -170,12 +178,12 @@ handle integer-based, 32bit argb images, which was used to great effect. Sped up
 </span><span style="color:#616e88;">// overhead: none really, just a few instructions that the CPU can blaze through
 </span><span style="color:#81a1c1;">int</span><span> val </span><span style="color:#81a1c1;">= </span><span>(ptr[</span><span style="color:#b48ead;">0</span><span>] </span><span style="color:#81a1c1;">- </span><span style="color:#a3be8c;">&#39;0&#39;</span><span>) </span><span style="color:#81a1c1;">* </span><span style="color:#b48ead;">10 </span><span style="color:#81a1c1;">+ </span><span>(ptr[</span><span style="color:#b48ead;">1</span><span>] </span><span style="color:#81a1c1;">- </span><span style="color:#a3be8c;">&#39;0&#39;</span><span>)</span><span style="color:#eceff4;">;
 </span></code></pre>
-<h2 id="2-make-it-cache-friendly">2. Make it cache friendly</h2>
+<h2 id="3-make-it-cache-friendly">3. Make it cache friendly</h2>
 <p>This is where the meat of the matter is. Think about the data writes and reads, both on temporal and spatial axes.
 Every load and store needs to be accounted for and studied. Is it needed, where does it write, when should it write, are there any similarly pointed writes/reads?
 Similarly for reads, consider not just the location in the code, but the memory location it concerns.</p>
 <p>To put it plainly, try to access data that's either close to data you've already accessed or data that you've recently accessed.</p>
-<p>If you algorithm is just accessing a part of your data, e.g. you have an array of structs and you're only acessing the first 8 bytes of a 128 byte struct, you're wasting a lot of cpu. Separate out the relevant data and process it independently. The relevant data stays hot in cache and you reap the benefits.</p>
+<p>If your algorithm is just accessing a part of your data, e.g. you have an array of structs and you're only accessing the first 8 bytes of a 128 byte struct, you're wasting a lot of cpu. Separate out the relevant data and process it independently. The relevant data stays hot in cache and you reap the benefits.</p>
 <p>One nice trick is if you're writing to a location that you know you won't access soon, you can use streaming non-temporal writes/stores (<code>_mm_stream_XX</code> intrinsics in x86).
 Using them allows the CPU to bypass the data caches and speed up the whole process. Useful for constricted memory bandwidth as well.</p>
 <p>Once you've done all that (or ideally before, premature optimization is not a thing here in this blog. Improperly granulated optimization on the other hand, is),
@@ -209,9 +217,9 @@ you can see what the actual values will be for each piece of data and compress t
 In practice, on x86-64, this means that you can fit 4 <code>good_order</code> structs in a 64bit cache line, whereas you can fit only 2 <code>bad_order</code> structs (with one spilling over).<br />
 Which is a bit bonkers if you think about it, simply reordering a few lines in an editor can take off a good chunk of a runtime (depending on the algorithm of course).</p>
 <p>You can use <code>__attribute__((packed))</code> instead of manually reordering members, but I'd only use it for protocol/storage use as unaligned members can cause issues on some architectures, so just one more thing to keep in mind.</p>
-<p>Finally, if you're in a loop where you know exactly which next adresses you're going to access (provided it's not a simple strided memory access pattern), you can use software prefetching instructions (<code>__builtin_prefetch</code> intrinsic in x86). But again, unless it's a highly unpredictable (for the pretty good hardware prefetchers of the modern CPUs), you should just trust the CPU.</p>
-<h2 id="3-make-it-simd">3. Make it SIMD</h2>
-<p>Vectorizing an algorithm can in some simpler cases come as a result of the step above, as the result is usually a serial processing of data, which is highly amenable to vectorization (and paralellization). In that case, simply grouping the data in 8/16/32 wide groups and using vector instructions to process them can be enough.<br />
+<p>Finally, if you're in a loop where you know exactly which next addresses you're going to access (provided it's not a simple strided memory access pattern), you can use software prefetching instructions (<code>__builtin_prefetch</code> intrinsic in x86). But again, unless it's a highly unpredictable (for the pretty good hardware prefetchers of the modern CPUs), you should just trust the CPU.</p>
+<h2 id="4-make-it-simd">4. Make it SIMD</h2>
+<p>Vectorizing an algorithm can in some simpler cases come as a result of the step above, as the result is usually a serial processing of data, which is highly amenable to vectorization (and parallelization). In that case, simply grouping the data in 8/16/32 wide groups and using vector instructions to process them can be enough.<br />
 In those cases, what can also happen as well is autovectorization, where the compiler will happily recognize that a loop vectorizable and do the whole process for you.</p>
 <p>In other cases, you have to take a good hard look at what your algorithm is doing, separate out independent streams of data processing, rearrange the data to fit the vectorized version so it's laid out nicely and contiguously for the SIMD instructions to speed through, and try to vectorize the whole loop(s). If you have some complex data movement going on, it can be a challenge to shuffle and permute all the bytes around, but a fun challenge nonetheless.</p>
 <p>One thing to be aware of is that not all instruction sets are available on all CPUs microarchitectures (looking at you Intel with AVX512) and thus code that you write can just 
@@ -227,11 +235,11 @@ Example:</p>
 </span></code></pre>
 <p>For more information on this (and data-oriented design in general), research SoA(structures of arrays) and AoSoA (arrays of structures of arrays).
 This could honestly be a whole series of blog posts, so just for the sake of terseness, take a look at the materials section at the bottom for sources.</p>
-<h2 id="4-make-it-parallel">4. Make it parallel</h2>
+<h2 id="5-make-it-parallel">5. Make it parallel</h2>
 <p>So now, parallelization at this stage should come at no cost, you've already separated out the data processing in independent streams, parallelizing should be just a matter of using <code>OpenMP</code> and <code>rayon</code> in case of C/C++ and Rust. Combined with the above steps, this should easily net you two orders of magnitude worth of speedup.</p>
 <p>One thing you should be aware of however, is <a href="https://en.wikipedia.org/wiki/False_sharing">false sharing</a>.<br />
 In short, if you have multiple threads accessing a single cache line, it'll trigger a memory stall and a load from RAM.<br />
-Ironically, it can be fixed by adding padding, which makes less data fit in the cache, but enables the paralellization to do its thing. Thus a net positive.
+Ironically, it can be fixed by adding padding, which makes less data fit in the cache, but enables the parallelization to do its thing. Thus a net positive.
 Small example:</p>
 <pre data-lang="cpp" style="background-color:#2e3440;color:#d8dee9;" class="language-cpp "><code class="language-cpp" data-lang="cpp"><span style="color:#81a1c1;">struct </span><span style="color:#8fbcbb;">packed </span><span>{
 </span><span>    std</span><span style="color:#81a1c1;">::</span><span>atomic&lt;</span><span style="color:#8fbcbb;">int64_t</span><span>&gt; a</span><span style="color:#eceff4;">;
@@ -246,7 +254,7 @@ Small example:</p>
 </span></code></pre>
 <p>In the <code>packed</code> struct, both members fit in a single cache line and will therefore exhibit false sharing in a multithreaded scenario.</p>
 <h2 id="conclusion">Conclusion</h2>
-<p>That is more or less it. Note that this list is not applicable in every case (how on earth would you parallelise an interpreter) nor does it have every optimization worth doing (rewriting a subroutine in assembly for example).</p>
+<p>That is more or less it. Note that this list is not applicable in every case (how on earth would you parallelize an interpreter) nor does it have every optimization worth doing (rewriting a subroutine in assembly for example).</p>
 <p>It should cover most of it though as, with programming, all we're doing is shuffling data from end to the other with some transformation in between.</p>
 <h2 id="how-do-gc-scripting-languages-fit-in">How do GC/scripting languages fit in?</h2>
 <p>Short answer - they don't.</p>
@@ -270,14 +278,6 @@ You can even go bare-metal and GC-free with <a href="https://flattened.net/">bfl
 </li>
 </ul>
 <p>Despite the outliers, if you truly have non-IO-bottlenecked, data-intensive code that needs to run as fast as possible, systems languages like C/C++/Rust are your best bet.</p>
-<h2 id="profiling">Profiling</h2>
-<p>Before doing anything - <strong>profile</strong>. </p>
-<p>Sometimes you can intuit where the bottleneck is, but most of the time, you would be surprised at the real place the algorithm falls apart.
-Sometimes it won't be a single bottleneck, maybe it'll be spread out over multiple places (worst case scenario being the flat profile where program time is roughly evenly distributed).</p>
-<p>A lot of it depends on not only understanding low-level programming but the domain that you're working with.<br />
-There's only so much you can optimize without enough information on what that specific algorithm/code/subsystem is supposed to be doing, rather than what it is actually (slowly) doing.</p>
-<p>Also, once the lowest-hanging fruit has been picked, we're not talking just function, but instruction-level profiling as well where, depending on the machine, you can be frontend-bound, backend-bound, memory-bound... a whole new world opens up.<br />
-See VTune <a href="https://www.intel.com/content/www/us/en/docs/vtune-profiler/user-guide/2023-0/cpu-metrics-reference.html">metrics</a> and <a href="https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/top-down-microarchitecture-analysis-method.html">analysis</a> guides, lots of useful stuff in there.</p>
 <h2 id="useful-tools-material">Useful tools &amp; material</h2>
 <ul>
 <li>hyperfine - benchmarking</li>
